# CppAlgorithms

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  Makefile  README.md  discrete_mathematics.cpp  input.txt  main  main.cpp  output.txt
.zed/: tasks.json
PTIT/basic_technique/: BCNEPER.cpp
bits/: libraries.cpp  macros.cpp  macros.h
bits/graph/: undirected.cpp
cmake/: CompilerFlags.cmake  Dependencies.cmake
codeforce/: 2092E_she_knows.cpp  2094A_trippi_troppi.cpp
design-patterns/: CMakeLists.txt
design-patterns/creational/: factory_method.cpp
discrete_mathematics/: graph.cpp  karf.cpp
graph/: CMakeLists.txt
graph/include/graph/: search.hpp
graph/src/: search.cpp
graph/tests/: CMakeLists.txt  search_test.cpp
leetcode/array_string/: 122_best_time_buy_sell_ii.cpp  12_integer_to_roman.cpp  13_roman_to_integer.cpp  14_longest_common_prefix.cpp  151_reverse_words_in_a_string.cpp  169_majority_element.cpp  189_rotate_array.cpp  26_remove_duplicates_from_sorted_array.cpp  27_remove_element.cpp  45_jump_game_ii.cpp  48_rotate_image.cpp  53_maximum_subarray.cpp  55_jump_game.cpp  58._length_of_last_word.cpp  6_zigzag_conversion.cpp  80_remove_duplicates_from_sorted_array_ii.cpp  88_merge_sorted_array.cpp  9_palindrome_number.cpp
leetcode/array_two_pointers/: 169_majority_element.cpp  27_remove_element.cpp  88_merge_sorted_array.cpp
leetcode/backtracking/: 46_permutations.cpp  77_combinations.cpp
leetcode/binary_tree/: 100_same_tree.cpp  101_symmetric_tree.cpp  102_binary_tree_level_order_traversal.cpp  103_binary_tree_zigzag_level_order_traversal.cpp  104_maximum_depth_of_binary_tree.cpp  108_convert_sorted_array_to_binary_search_tree.cpp  112_path_sum.cpp  124_binary_tree_maximum_path_sum.cpp  129_sum_root_to_leaf_numbers.cpp  199_binary_tree_right_side_view.cpp  226_invert_binary_tree.cpp  637_average_of_levels_in_binary_tree.cpp
leetcode/bit_manipulation/: 136_single_number.cpp  137_single_number_ii.cpp  190_reverse_bits.cpp  191_number_of_1_bits.cpp  201_bitwise_and_of_numbers_range.cpp  67_add_binary.cpp
leetcode/bstree/: 230_kth_smallest_element_in_a_bst.cpp  (+1 more)
libraries/: CMakeLists.txt
libraries/core/: CMakeLists.txt
libraries/core/include/core/: core.hpp  graph.hpp  macros.hpp
libraries/core/src/: core.cpp  graph.cpp
libraries/graph/: CMakeLists.txt
libraries/graph/include/graph/: graph.hpp
libraries/graph/src/: graph.cpp
theory/: CMakeLists.txt
theory/01_foundations/: 02_cpp_oop.cpp  CMakeLists.txt  basic.cpp  cpp_basic.cpp  cpp_oop.cpp
theory/02_data_structure/: CMakeLists.txt
theory/02_data_structure/arrays/: prefix_sum_1d.cpp
theory/02_data_structure/include/data_structure/arrays/: prefix_sum_1d.hpp
theory/02_data_structure/src/: arrays.cpp
theory/02_data_structures/: CMakeLists.txt
theory/02_data_structures/array/: difference_array.cpp  prefix_sum_1d.cpp  prefix_sum_2d.cpp
theory/02_data_structures/linked_list/: detect_cycle.cpp  intersection.cpp  merge_two_sorted_lists.cpp  operators.cpp  reverse_linked_list.cpp
theory/02_data_structures/queue/: binary_number.cpp  count_operator.cpp
theory/03_basic_technique/backtracking/: backtracking_binary.cpp  path_matrix.cpp
theory/03_basic_technique/greedy/: link_line.cpp
theory/04_mathematics/generation_algorithms/: combination.cpp  permutation.cpp
theory/07_graph/: CMakeLists.txt  circle_bfs.cpp  kruskal.cpp  tarjan_articulation.cpp
theory/07_graph/include/07_graph/: graph_search.hpp
theory/07_graph/src/: graph_search.cpp
theory/07_graph/tests/: CMakeLists.txt  graph_search_test.cpp
theory/array/: difference_array.cpp  prefix_sum_1d.cpp  prefix_sum_2d.cpp
theory/backtracking/: backtracking_binary.cpp  backtracking_combination.cpp  backtracking_permutation.cpp  backtracking_two_arg.cpp  mouse_move_matrix.cpp  n_queen.cpp  path_matrix.cpp
theory/divide_conquer/: binary_pow.cpp  string_fibonacci.cpp
theory/dynamic_programming/: coin_problem.cpp  longest_increasing_subsequence.cpp
theory/generation/: binary.cpp  combination.cpp
theory/generation_algorithms/: binary.cpp  combination.cpp  partition.cpp  permutation.cpp
theory/graph/: circle_bfs.cpp  circle_dfs.cpp  connected.cpp  path.cpp  search.cpp  topological_dfs.cpp  topological_kahn.cpp
theory/graph_theory/: articulation_point.cpp  bellman_ford.cpp  bipartite_graph.cpp  bridge_vertex.cpp  circle_bfs.cpp  circle_dfs.cpp  circle_directed.cpp  connected.cpp  dijsktra.cpp  euler_cycle.cpp  floyd_warshall.cpp  height_tree.cpp  kosaraju.cpp  kruskal.cpp  path.cpp  prim.cpp  search.cpp  tarjan_articulation.cpp  tarjan_strong_components.cpp  topological_dfs.cpp  topological_kahn.cpp  tree_graph.cpp
theory/greedy_algorithm/: coin_change.cpp  frequency_character.cpp  link_line.cpp  scheduling.cpp
theory/knowledges/array/: difference_array.cpp  prefix_sum_1d.cpp
theory/knowledges/backtracking/: backtracking_two_arg.cpp  mouse_move_matrix.cpp
theory/knowledges/dynamic_programming/: coin_problem.cpp  lis_n2.cpp
theory/knowledges/generation_algorithms/: binary.cpp  partition.cpp
theory/knowledges/graph_theory/: connected.cpp  prim.cpp  search.cpp  topological_dfs.cpp
theory/knowledges/number_theory/: binary_exponentiation.cpp
theory/knowledges/queue/: binary_number.cpp  count_operator.cpp
theory/knowledges/stack/: prefix_to_mid_operator.cpp  valid_parentheses.cpp
theory/knowledges/string_vector_set/: string.cpp  vector.cpp
theory/number_theory/: binary_exponentiation.cpp  combinatorics_2.cpp  combinatorics_3.cpp  extended_euclidean.cpp  factorize.cpp  gcd_lcm.cpp  legendre.cpp  modular_inverse.cpp  modulo.cpp  prime.cpp  prime_du.cpp  progression.cpp
theory/queue/: bfs_status.cpp  binary_number.cpp  count_operator.cpp
theory/rmq/: fenwick_tree.cpp  segment_tree.cpp
theory/sort_search/: quick_sort.cpp  search.cpp  sort.cpp
theory/stack/: calculate_express.cpp  prefix_to_mid_operator.cpp  prefix_to_suffix_operator.cpp  suffix_to_prefix_operator.cpp  valid_parentheses.cpp
theory/string/: char.cpp  string.cpp
theory/string_vector_set/: char.cpp  string.cpp  vector.cpp
(+255 files in other folders)
